# cursor-file-system

./: .bumpversion.cfg  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  WARP.md  pyproject.toml
.claude/: settings.local.json
.cursor/: init.md
.cursor/bugs/: 1-DONE-test-exec.md  1-test-exec.md  10-DONE-cannot-create-an-issue-in-non-interactive-mode.md  11-DONE-cfs-sync-is-still-creating-duplicates.md  11-cfs-sync-is-still-creating-duplicates.md  12-DONE-cfs-gh-dedup-is-broken.md  13-DONE-when-i-reopen-an-issue-on-github-and-then-do-cfs-sync-it-re-closes-it-because-the-cfs-issue-is-marked-as-done.md  13-when-i-reopen-an-issue-on-github-and-then-do-cfs-sync-it-re-closes-it-because-the-cfs-issue-is-marked-as-done.md  14-DONE-test-suite-has-81-failing-tests-pytest-broken.md  14-test-suite-has-81-failing-tests-pytest-broken.md  15-DONE-c-content-inconsistent-between-createedit-edit-c-destroys-frontmatter-title.md  15-c-content-inconsistent-between-createedit-edit-c-destroys-frontmatter-title.md  16-DONE-gh-sync-conflict-loop-section-parsers-not-code-fence-aware.md  16-gh-sync-conflict-loop-section-parsers-not-code-fence-aware.md  2-DONE-test-fix-login-bug.md  2-test-fix-login-bug.md  3-DONE-test-with-content.md  3-test-with-content.md  4-DONE-when-running-the-cfs-order-command-the-done-documents-are-improperly-renamed.md  4-when-running-the-cfs-order-command-the-done-documents-are-improperly-renamed.md  (+8 more)
src/cfs/: cli.py  (+11 more)
tests/: test_cli.py  test_core.py  test_documents.py  test_editor.py  test_exceptions.py  test_frontmatter.py  test_github.py  test_sync.py
(+75 files in other folders)
